# SGF-RecFNO

./: .env.example  .gitattributes  .gitignore  CITATION.md  Makefile  README.md  pyproject.toml  requirements.txt
NOAA/: generate_locations_noaa.py  noaa_cnn.py  noaa_fno.py  noaa_maskfno.py  noaa_maskunet.py  noaa_mlp.py  noaa_pod.py  noaa_voronoicnn.py  noaa_voronoifno.py  plot_results.py
benchmark/: README.md  ablation.py  cli.py  config.py  export_fluid_benchmark.py  external_loaders.py  external_models.py  external_paths.py  figures_paths.py  fluid_adapters.py  fluid_ckpt.py  fluid_config.py  fluid_eval.py  fluid_visualize.py  heat_adapters.py  isotherm_metrics.py  metrics.py  plot_ablation_studies.py  plot_all_figures.py  plot_all_fluid_figures.py  plot_case_comparison.py  plot_isotherm_comparison.py  plot_mae_histogram.py  plot_problem_setup.py  plot_recfno_2x3.py  plot_sdf_ablation.py  plot_sgf_pipeline.py  plot_spectrum_error.py  plot_test_metrics.py  plot_three_cases_six_models.py  registry.py  run_comparison.py  train_external.py  training_resume.py  visualize.py
checkpoints/: README.md
cylinder2D/: cylinder2D_cnn.py  cylinder2D_cnn_snr.py  cylinder2D_fno.py  cylinder2D_fno_snr.py  cylinder2D_maskfno.py  cylinder2D_maskfno_snr.py  cylinder2D_maskunet.py  cylinder2D_maskunet_snr.py  cylinder2D_mlp.py  cylinder2D_pod.py  cylinder2D_pod_snr.py  cylinder2D_superresolution.py  cylinder2D_voronoifno.py  cylinder2D_voronoifno_snr.py  cylinder2D_voronoiunet.py  cylinder2D_voronoiunet_snr.py  generate_locations_cylinder.py  plot_results.py
darcy/: darcy_cnn.py  (+8 more)
(+62 files in other folders)
